# create-arca

./: .gitignore  .gitleaks.toml  CONTRIBUTING.md  LICENSE  README.md  copier.yml  pyproject.toml
.github/workflows/: ci.yml
src/create_arca/: __init__.py  cli.py
template/: CLAUDE.md  settings.json
template/agents/: agent-engineer.md  ai-engineer.md  ai-production-engineer.md  ai-red-teamer.md  ai-redteam-orchestrator.md  alignment-researcher.md  api-designer.md  architect-ai.md  aws-engineer.md  bug-bounty-hunter.md  checkpoint-manager.md  chief-architect.md  code-critic.md  code-narrator.md  compound-ai-architect.md  cost-analyzer.md  credential-hunter.md  cve-hunter.md  data-engineer.md  data-scientist.md  data-validator.md  debt-detector.md  deployment.md  devops.md  distributed-training-engineer.md  dl-engineer.md  docs-writer.md  evals-engineer.md  exploit-executor.md  flag-validator.md  formal-verifier.md  frontend-ai.md  git-master.md  gpu-engineer.md  htb-orchestrator.md  htb-recon.md  interpretability-researcher.md  maintainability-engineer.md  math-critic.md  mcp-security-auditor.md  (+18 more)
template/commands/: adr-new.md  aidesigner.md  arca-vault-sync.md  ask-live.md  autopilot.md  claude-config-audit.md  close-phase.md  commit.md  cost-check.md  debug-gpu.md  deploy-aws.md  diagnose.md  engram-to-obsidian.md  friday-gc.md  guardian-audit.md  harness-audit.md  htb-new.md  htb-resume.md  intel.md  lt-archive.md  lt-start.md  lt-stop.md  meta-review.md  ml-agent.md  ml-dl.md  ml-new.md  morning-briefing.md  obsidian-cycle-close.md  obsidian-status.md  rag-new.md  (+23 more)
(+281 files in other folders)
